repaired tom menu too big bug and few look tuning of tom menu in smallscreens. Repaired bug with version number not found on clean install and first run of app causing app crash

--- a/app/assets/stylesheets/_shared/_nav.css.scss
+++ b/app/assets/stylesheets/_shared/_nav.css.scss
@@ -13,7 +13,7 @@ nav {
 	ul {
 		margin: 0;
 		padding: 0;
-		height: 100%;
+		//height: 100%;
 
 		div {
 
